# rhythm-game

./: .clang-format  .editorconfig  .gitattributes  CMakeLists.txt  README.md
src/: main.cpp
src/time/: timeutils.cpp  timeutils.hpp
